--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,8 +28,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   image_picker: ^0.6.3+1
-
-
+  path_provider: ^1.6.0
+  path: ^1.6.4
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
